# mk20d7

./: MK20D7.svd  README.md  device.x
mk20d7/: Cargo.toml
mk20d7/src/: crc.rs  dma.rs  spi1.rs
mk20d7/src/adc1/: pga.rs  sc1.rs
mk20d7/src/axbs/: crs.rs
mk20d7/src/can0/: iflag1.rs
mk20d7/src/dma/: es.rs  tcd_attr.rs
mk20d7/src/fb/: cscr.rs
mk20d7/src/fmc/: dataw1sl.rs  dataw3su.rs
mk20d7/src/ftfl/: fcnfg.rs
mk20d7/src/ftfl_flash_config/: fopt.rs
mk20d7/src/mcg/: s.rs
mk20d7/src/pmc/: lvdsc1.rs
mk20d7/src/portb/: dfer.rs
mk20d7/src/sim/: sopt1.rs  sopt2.rs
mk20d7/src/smc/: pmctrl.rs  vllsctrl.rs
mk20d7/src/spi0/: mcr.rs
mk20d7/src/spi1/: pushr.rs
mk20d7/src/tsi0/: pen.rs
mk20d7/src/uart0/: ie7816.rs  wp7816t0.rs
mk20d7/src/uart2/: s1.rs
mk20d7/src/uart4/: modem.rs
mk20d7/src/vref/: sc.rs
src/: lib.rs  uart0.rs
src/adc0/: sc3.rs
src/adc1/: sc2.rs
src/axbs/: mgpcr.rs
src/crc/: crch.rs
src/dac0/: c1.rs
src/dma/: cdne.rs  ssrt.rs  tcd_csr.rs
src/fb/: cspmcr.rs
src/fmc/: dataw0sl.rs  dataw0su.rs  dataw1su.rs  dataw2sl.rs  dataw2su.rs  dataw3sl.rs  pfb0cr.rs  pfb1cr.rs
src/ftfl_flash_config/: fsec.rs
src/i2c1/: f.rs
src/lptmr0/: cnr.rs
src/mcg/: c8.rs  sc.rs
src/pdb0/: chs.rs
src/porta/: pcr.rs
src/sim/: fcfg1.rs  sdid.rs  sopt4.rs  sopt5.rs
src/uart0/: is7816.rs  wp7816t1.rs
src/uart1/: pfifo.rs
src/uart2/: s2.rs
src/uart3/: c5.rs
src/uart4/: c4.rs
src/wdog/: stctrlh.rs
teensy-example/: Cargo.toml
teensy-example/src/: main.rs
teensy_lib/: Cargo.toml  memory.x
teensy_lib/src/: clk_setup.rs  lib.rs  vectors_ram.rs
