[package]
name = "teensy_lib"
version = "0.1.0"
authors = ["Stephen Fleischman <stephenf@cs.washington.edu>"]
edition = "2018"

[dependencies]
# bare-metal = "0.2.0"
cortex-m-rt = "0.6.5"
vcell = "0.1.0"
alloc-cortex-m = "0.3.5"
panic-halt = "0.2.0"
cfg-if = "0.1.6"

[dependencies.cortex-m]
version = "0.5.8"
features = ["const-fn","inline-asm"]

[dependencies.mk20d7]
path = "./../mk20d7"
features = ["rt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# "F_CPU must be 192, 180, 168, 144, 120, 96, 72, 48, 24, 16, 8, 4, or 2 MHz"

[features]
default = ["clk_72MHz"]
clk_96MHz = []
clk_72MHz = []
clk_48MHz = []
clk_24MHz = []